# resize-dataset

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  resize_dataset.cfg.html  resize_dataset.dataset.base.html  resize_dataset.dataset.coco.html  resize_dataset.dataset.html  resize_dataset.dataset.utils.html  resize_dataset.engine.base.html  resize_dataset.engine.html  resize_dataset.html  resize_dataset.image.html  resize_dataset.image.resize.html  resize_dataset.label.conversion.html  resize_dataset.label.html  resize_dataset.label.visualization.html  resize_dataset.utils.base.html  resize_dataset.utils.html  search.html  searchindex.js  test.py
.doctrees/: environment.pickle  index.doctree  modules.doctree  resize_dataset.cfg.doctree  resize_dataset.dataset.base.doctree  resize_dataset.dataset.coco.doctree  resize_dataset.dataset.doctree  resize_dataset.dataset.utils.doctree  resize_dataset.doctree  resize_dataset.engine.base.doctree  resize_dataset.engine.doctree  resize_dataset.image.doctree  resize_dataset.image.resize.doctree  resize_dataset.label.conversion.doctree  resize_dataset.label.doctree  resize_dataset.label.visualization.doctree  resize_dataset.utils.base.doctree  resize_dataset.utils.doctree
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
_sources/: index.rst.txt  modules.rst.txt  resize_dataset.cfg.rst.txt  resize_dataset.dataset.base.rst.txt  resize_dataset.dataset.coco.rst.txt  resize_dataset.rst.txt  (+8 more)
(+38 files in other folders)
